# aoc_try_with_rust

./: .rustfmt.toml  Cargo.toml
src/: main.rs
src/solver/: mod.rs
src/solver/y2021/: day1.rs  day2.rs  day3.rs  day4.rs  mod.rs
src/solver/y2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/utils/: box_or_ref.rs  graph.rs  int_range.rs  int_trait.rs  mod.rs
src/utils/grid/: grid_2d_bitvec.rs  grid_2d_vec.rs  mod.rs
