[package]
name = "khangp0000_aoc_try_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.75"
reqwest = { version = "^0.11", features = ["blocking"]}
sscanf = "^0.4.1"
phf = { version = "^0.11", features = ["macros"]}
clap = { version = "^4.4.10", features = ["derive"]}
indoc = "^2.0.4"
regex = { version = "^1.10.2"}
bitvec = "^1.0.1"
num = "^0.4.1"
derive_more = { version = "^1.0.0-beta.6", features = ["full"] }
thiserror = "^1.0.50"
dyn-iter = "^1.0.1"

[profile.release-lto]
inherits = "release"
strip = "symbols"
lto = true