[package]
name = "khangp0000_aoc_try_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wip = []


[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
reqwest = { version = "0.11", features = ["blocking"] }
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.4.10", features = ["derive"] }
indoc = "2.0.4"
regex = "1.10.2"
bitvec = "1.0.1"
num = "0.4.1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
thiserror = "1.0.50"
dyn-iter = "1.0.1"
derive-new = "0.6.0"
enumset = "1.1.3"
itertools = "0.12.0"
indexmap = "2.1.0"
linked-hash-map = "0.5.6"
rayon = "1.8.0"
num_cpus = "1.16.0"
bit-set = "0.5.3"

[profile.test]
#opt-level = 3